--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -1,25 +1,15 @@
 ---
 import Layout from '@components/layout/index.astro'
 import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
 import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
-import Terms from '@components/terms/index.astro'
-
-let { slug } = Astro.params;
-
-const slugs = [
-    'terms-and-conditions',
-    'delivery',
-    'returns-refunds'
-]
-
-if (slugs.indexOf(slug) === -1) return new Response(null,{status:404})
+import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc'
+import About from '@components/about-us/index.astro'
 
 const isOnline = FM_IS_ONLINE === 'true'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = Astro.cookies.has(PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
 
-const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/static-text/${slug}`,{
+const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/static-text/about-us`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
 
@@ -54,20 +44,6 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
 }
 
 Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isOnline))
-
-let title = ''
-
-switch (slug) {
-    case 'terms-and-conditions':
-        title = 'Terms and Conditions'
-        break
-    case 'delivery':
-        title = 'Delivery'
-        break
-    case 'returns-refunds':
-        title = 'Returns and Refunds'
-        break
-}
 ---
 
 <Layout {...{
@@ -78,8 +54,8 @@ switch (slug) {
     shopAddressMap,
     signedIn,
     firstName,
-    title,
+    title:'About Us',
     headerCarouselTexts,
 }}>
-    <Terms {...{text}} />
+    <About {...{text}} />
 </Layout>
