--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -170,7 +170,7 @@ const productSchema = isProductPage ? {
       }
     }
 
-    @media screen and (min-width: 1024px) and (max-width: 1535px) {
+    @media screen and (min-width: 1024px) {
       .related-product:nth-of-type(n+5) {
         display:none;
       }
