--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,6 +73,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:'',
     headerCarouselTexts,
+    description:"Discover beautiful, distinctive fashion jewellery at affordable prices. Get 3 pieces for £20 & free UK delivery over £20. Explore our unique designs you won't find elsewhere!"
 }}>
     <Homepage productIDs={productIDs || []} productObj={productMap} cartItemObj={cartItemMap}  />
 </Layout>
