--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -83,7 +83,8 @@ const productName = productMap[id].name
     imageURL:PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX+productMap[id].images[0].name+productMap[id].images[0].ext,
     images:productMap[id].images,
     price:productMap[id].discountedPrice,
-    productID:id
+    productID:id,
+    inStock:(!!productMap[id].stockQuantities && !!productMap[id].stockQuantities.length) ? !!productMap[id].stockQuantities.map(e=>e.quantity).reduce((a,b)=>a+b,0) : false
 }}>
     <Product 
         id={id} 
