--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -131,7 +131,7 @@ const productSchema = isProductPage ? {
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href={`https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300..700&family=Noto+Serif+JP:wght@300..900&family=Yuji+Syuku&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^%26*()|,.<>?/:;'”&${isTrackOrderPage ? 'family=Libre+Barcode+128&' : ''}display=swap`} rel="stylesheet">
+  <link href={`https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300..700&family=Noto+Serif+JP:wght@300..900&family=Yuji+Syuku&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^%26*()|,.<>?/:;'”&${isTrackOrderPage ? 'family=Libre+Barcode+128&' : ''}display=swap`} rel="stylesheet" media="screen">
 
   <link rel="shortcut icon" href="/favicon.ico" sizes="32x32">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" id="favicon-svg">
