--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -39,7 +39,7 @@ const imageLen = images.filter(e=>e.catalogue).length
         <Product id={id} productDetails={productDetails} renderImages={!group} />
     </a>
     <div class="absolute top-0 right-0 p-1 mouse:hidden">
-        <button id=`catalogue-add-to-bag-touchscreen-${id}` class="add-to-bag add-to-bag-touchscreen" type="button">
+        <button id=`catalogue-add-to-bag-touchscreen-${id}` class="add-to-bag add-to-bag-touchscreen" type="button" aria-label="Add to Bag">
             <ShoppingBag className="shopping-bag-icon h-5 w-5 xs:h-6 xs:w-6 sm:h-7 sm:w-7 fill-none stroke-[0.2rem]" />
             <LoadingSmall className="h-5 w-5 xs:h-6 xs:w-6 sm:h-7 sm:w-7 stroke-[0.2rem] fill-gray-500 animate-spin hidden" />
         </button>
