--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -399,12 +399,12 @@ window.onloadTurnstileCallback = () => {
   window.turnstile.render("#turnstile-tag", {
     sitekey: PUBLIC_FM_TURNSTILE_SITEKEY,
     callback: () => {
-      console.log(`Challenge Success`);
       const btnToCheck = document.getElementsByClassName('turnstile-check') as HTMLCollectionOf<HTMLInputElement>
       const len = btnToCheck.length
       for (let i=0; i<len; i++) btnToCheck.item(i).disabled = false
       turnstilePassed.set(true)
     },
+    "error-callback":()=>{}
   });
 }
 
