--- a/src/pages/account/profile.astro
+++ b/src/pages/account/profile.astro
@@ -6,8 +6,8 @@ import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppi
 import EditorContainer from '@components/account-profile/editor-container.astro';
 import EditorPersonalInfo from '@components/account-profile/editor-personal-info.astro';
 import EditorPassword from '@components/account-profile/editor-password.astro';
-import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { FM_IS_ONLINE, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 
 interface IApiResponse {
     firstName:string;
