--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -4,8 +4,8 @@ import Layout from '@components/layout/index.astro'
 import type { IProduct } from '@components/catalogue-item/interfaces';
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import CollectionPointsSidebar from '@components/product-page/collection-points-sidebar';
-import { FM_IS_ONLINE, FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { FM_IS_ONLINE, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, PUBLIC_FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 
 interface IApiResponse {
     relatedProductIDs:string[];
