--- a/src/components/homepage/index.astro
+++ b/src/components/homepage/index.astro
@@ -24,7 +24,6 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
             background-position-y: center;
             background-image: image-set(
                 url(${tempImageFilename}.avif) type('image/avif'),
-                url(${tempImageFilename}.webp) type('image/webp'),
                 url(${tempImageFilename}.jpg) type('image/jpeg')
             );
         `.replaceAll('                ', '').replaceAll('        ', '').replaceAll('\n',' ').trim()}
@@ -172,7 +171,7 @@ const tempImageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-2000x673`
                 }
             }
             const imageFilename = `${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}banner-${imageSizes[index].w}x${imageSizes[index].h}`
-            bannerContainer.style.backgroundImage = `image-set(${['avif','webp','jpg'].map(e=>`url(${imageFilename}.${e}) type('image/${e === 'jpg' ? 'jpeg' : e}')`)})`
+            bannerContainer.style.backgroundImage = `image-set(${['avif','jpg'].map(e=>`url(${imageFilename}.${e}) type('image/${e === 'jpg' ? 'jpeg' : e}')`)})`
         }
 
         bannerContainer.style.maxHeight = `${bannerMaxHeight}px`
