--- a/src/components/product-page/image-vertical.astro
+++ b/src/components/product-page/image-vertical.astro
@@ -2,10 +2,13 @@
 import { PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
 import type { IProductImages } from "@components/catalogue-item/interfaces";
 
-type Props = IProductImages & {alt:string}
+type Props = IProductImages & {alt:string; index:number;}
 
 
-const { name, ext, alt } = Astro.props as Props
+const { name, ext, alt, index } = Astro.props as Props
+const filename = PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX + name
+
+const sizes = "(min-width: 768px) 60vw, 100vw"
 ---
 
 <picture>
@@ -14,10 +17,20 @@ const { name, ext, alt } = Astro.props as Props
             '.avif',
             ext
         ].map(e=>(
-            e === ext ?
-            <img src={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${name}${e}`} alt={alt} />
-            :
-            <source srcset={`${PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX}${name}${e}`} />
+            <source 
+                srcset={`${filename}_768x768${e} 768w, ${filename}${e} 2048w`} 
+                type={e === '.jpg' ? 'image/jpeg' : `image/${e.replaceAll('.','')}`} 
+                sizes={sizes}
+            />
         ))
     }
+    <img 
+        src={`${filename}_768x768${ext}`} 
+        srcset={`${filename}_768x768${ext} 768w, ${filename}${ext} 2048w`} 
+        sizes={sizes}
+        alt={alt} 
+        loading={!!index ? 'lazy' : 'eager'} 
+        width="768"
+        height="768"
+    />
 </picture>
