--- a/src/components/catalogue-item/image.astro
+++ b/src/components/catalogue-item/image.astro
@@ -1,6 +1,6 @@
 ---
+import { PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
 import type { IProductImages } from '@components/catalogue-item/interfaces'
-import { getImageStyle } from './image-style';
 
 interface Props extends IProductImages {
     id:string;
@@ -9,12 +9,12 @@ interface Props extends IProductImages {
     len:number;
     productPageProduct?:boolean;
     render:boolean;
-    imageSize?:number;
     showRadio:boolean;
 }
 
-const { name, ext, id, checked, index, len, productPageProduct = false, render, imageSize, showRadio } = Astro.props as Props
-const style = productPageProduct || render ? getImageStyle(name,ext,imageSize) : ''
+const { name, ext, id, checked, index, len, productPageProduct = false, render, showRadio } = Astro.props as Props
+const filename = PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX + name
+const sizes = productPageProduct ? '100vw' : '(min-width: 1536px) 25vw, (min-width: 640px) 33vw, 50vw'
 ---
 
 <astro-carousel-image 
@@ -24,17 +24,56 @@ const style = productPageProduct || render ? getImageStyle(name,ext,imageSize) :
     data-name={name}
     data-ext={ext}
 >
-    <div class="absolute top-0 bottom-0 left-0 right-0">
-        <input 
-            type="radio" 
-            name={id} 
-            aria-label={name} 
-            checked={checked} 
-            class={`peer appearance-none border border-gray-400 rounded-full checked:bg-gray-400 absolute ${productPageProduct ? '-bottom-5 w-1.5 h-1.5 2xs:-bottom-8 2xs:w-2 2xs:h-2' : 'z-10 bottom-2 w-1 h-1 xs:w-1.5 xs:h-1.5 mouse:hidden'} ${showRadio ? '' : 'hidden'}`.trim()} 
-        />
-        <div 
-            class="img-holder absolute top-0 bg-cover bg-no-repeat bg-center w-full h-full opacity-0 duration-500 peer-checked:opacity-100"
-            style={!!style ? `background-image: ${style}` : ''}
-        />
+    <input 
+        type="radio" 
+        name={id} 
+        aria-label={name} 
+        checked={checked} 
+        class={`peer appearance-none border border-gray-400 rounded-full checked:bg-gray-400 absolute ${productPageProduct ? '-bottom-5 w-1.5 h-1.5 2xs:-bottom-8 2xs:w-2 2xs:h-2' : 'z-10 bottom-2 w-1 h-1 xs:w-1.5 xs:h-1.5 mouse:hidden'} ${showRadio ? '' : 'hidden'}`.trim()} 
+    />
+    <div class="carousel-image-container w-full h-full object-center object-cover absolute top-0 left-0 opacity-0 duration-500 peer-checked:opacity-100">
+        <picture>
+            {['.avif',ext].map(e=>(
+                <source 
+                    srcset={`${filename}_256x256${e} 256w, ${filename}_768x768${e} 768w, ${filename}${e} 2048w`} 
+                    type={e === '.jpg' ? 'image/jpeg' : `image/${e.replaceAll('.','')}`} 
+                    sizes={sizes}
+                />
+            ))}
+            <img 
+                src={`${filename}_768x768${ext}`} 
+                srcset={`${filename}_768x768${ext} 768w, ${filename}${ext} 2048w`} 
+                sizes={sizes}
+                alt={name} 
+                loading={!!index ? 'lazy' : 'eager'} 
+                width={768}
+                height={768}
+                class="object-cover object-center"
+                loading={((productPageProduct || render) && !index) ? 'eager' : 'lazy'}
+            />
+        </picture>
     </div>
 </astro-carousel-image>
+
+<script>
+    class CarouselImage extends HTMLElement {
+        constructor(){
+            super();
+
+            const container = this.getElementsByClassName('carousel-image-container')[0];
+
+            const resizeObserverCallback = (entries:ResizeObserverEntry[])=>{
+                const { width } = entries[0].contentRect;
+                const img = this.getElementsByTagName('img')[0];
+                if(img){
+                    img.width = width;
+                    img.height = width;
+                }
+            }
+            const resizeObserver = new ResizeObserver(resizeObserverCallback);
+            resizeObserver.observe(container);
+        }
+    }
+
+    customElements.define('astro-carousel-image', CarouselImage);
+</script>
