--- a/src/components/product-page/image-vertical.astro
+++ b/src/components/product-page/image-vertical.astro
@@ -32,5 +32,6 @@ const sizes = "(min-width: 768px) 60vw, 100vw"
         loading={!!index ? 'lazy' : 'eager'} 
         width="768"
         height="768"
+        class="object-cover object-center"
     />
 </picture>
