--- a/src/components/catalogue-item/product.astro
+++ b/src/components/catalogue-item/product.astro
@@ -23,7 +23,7 @@ const finalImages = images.filter(e=>e.catalogue)
 ---
 
 <div class="relative bg-white rounded-lg mouse:hover:shadow-gray-200 mouse:hover:shadow-lg mouse:hover:p-4 mouse:hover:m-[-1rem] transition-all mouse:hover:z-10 duration-300 group">
-    <div id=`catalogue-product-container-${id}` class="w-full relative width-1/2 pb-[100%] mouse:overflow-hidden">
+    <div id=`catalogue-product-container-${id}` class="w-full relative aspect-square mouse:overflow-hidden">
         <Carousel images={finalImages} id={id} renderImages={renderImages} imageSize={768} />
         <div class="touchscreen:hidden">
             <button aria-label="Previous Image" id=`catalogue-carousel-${id}-leftward` class=`${finalImages.length < 2 ? 'hidden' : ''} leftward absolute top-0 h-full left-0 w-2/12 duration-500 transition-all bg-gradient-to-r from-gray-400 to-transparent opacity-0 peer/left mouse:hover:opacity-10` />
