--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -52,7 +52,7 @@ const breadcrumbItems:ILink[] = [
                 relatedProductIDs.map(e=>(
                     <CatalogueItem 
                         id={e} 
-                        productPageProduct={false}
+                        productPageProduct
                         productDetails={productObj[e]} 
                         productCartDetails={cartItemObj[e]} 
                         group={0}
