--- a/src/components/catalogue-item/image.astro
+++ b/src/components/catalogue-item/image.astro
@@ -6,30 +6,24 @@ interface Props extends IProductImages {
     id:string;
     checked?:boolean;
     index:number;
-    len:number;
-    productPageProduct?:boolean;
+    productPageKeyProduct:boolean;
     render:boolean;
     showRadio:boolean;
 }
 
-const { name, ext, id, checked, index, len, productPageProduct = false, render, showRadio } = Astro.props as Props
+const { name, ext, id, checked, index, productPageKeyProduct, render, showRadio } = Astro.props as Props
 const filename = PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX + name
-const sizes = productPageProduct ? '100vw' : '(min-width: 1536px) 25vw, (min-width: 640px) 33vw, 50vw'
+const sizes = productPageKeyProduct ? '100vw' : '(min-width: 1536px) 25vw, (min-width: 640px) 33vw, 50vw'
+const isProductPage = Astro.url.pathname.startsWith('/product/')
 ---
 
-<astro-carousel-image 
-    data-index={index} 
-    data-len={len} 
-    data-product-page={productPageProduct ? '1' : '0'}
-    data-name={name}
-    data-ext={ext}
->
+<astro-carousel-image>
     <input 
         type="radio" 
         name={id} 
         aria-label={name} 
         checked={checked} 
-        class={`peer appearance-none border border-gray-400 rounded-full checked:bg-gray-400 absolute ${productPageProduct ? '-bottom-5 w-1.5 h-1.5 2xs:-bottom-8 2xs:w-2 2xs:h-2' : 'z-10 bottom-2 w-1 h-1 xs:w-1.5 xs:h-1.5 mouse:hidden'} ${showRadio ? '' : 'hidden'}`.trim()} 
+        class={`peer appearance-none border border-gray-400 rounded-full checked:bg-gray-400 absolute ${productPageKeyProduct ? '-bottom-5 w-1.5 h-1.5 2xs:-bottom-8 2xs:w-2 2xs:h-2' : 'z-10 bottom-2 w-1 h-1 xs:w-1.5 xs:h-1.5 mouse:hidden'} ${showRadio ? '' : 'hidden'}`.trim()} 
     />
     <div class="carousel-image-container w-full h-full object-center object-cover absolute top-0 left-0 opacity-0 duration-500 peer-checked:opacity-100">
         <picture>
@@ -48,7 +42,7 @@ const sizes = productPageProduct ? '100vw' : '(min-width: 1536px) 25vw, (min-wid
                 width={768}
                 height={768}
                 class="object-cover object-center"
-                loading={((productPageProduct || render) && !index) ? 'eager' : 'lazy'}
+                loading={((productPageKeyProduct || (render && !isProductPage)) && !index) ? 'eager' : 'lazy'}
             />
         </picture>
     </div>
