--- a/src/components/catalogue-item/product.astro
+++ b/src/components/catalogue-item/product.astro
@@ -24,7 +24,7 @@ const finalImages = images.filter(e=>e.catalogue)
 
 <div class="relative bg-white rounded-lg mouse:hover:shadow-gray-200 mouse:hover:shadow-lg mouse:hover:p-4 mouse:hover:m-[-1rem] transition-all mouse:hover:z-10 duration-300 group">
     <div id=`catalogue-product-container-${id}` class="w-full relative aspect-square mouse:overflow-hidden">
-        <Carousel images={finalImages} id={id} renderImages={renderImages} imageSize={768} />
+        <Carousel images={finalImages} id={id} renderImages={renderImages} productPageKeyProduct={false} />
         <div class="touchscreen:hidden">
             <button aria-label="Previous Image" id=`catalogue-carousel-${id}-leftward` class=`${finalImages.length < 2 ? 'hidden' : ''} leftward absolute top-0 h-full left-0 w-2/12 duration-500 transition-all bg-gradient-to-r from-gray-400 to-transparent opacity-0 peer/left mouse:hover:opacity-10` />
             <svg viewBox="0 0 70 100" height="1em" stroke-width="0.8rem" stroke-linecap="round" fill="none" class=`${finalImages.length < 2 ? 'hidden' : ''} absolute left-2 stroke-gray-700 opacity-0 duration-500 mouse:group-hover:opacity-30 peer-hover/left:opacity-100 pointer-events-none` style="top:calc(50% - 0.5em)">
